<resources>
    <string name="app_name">Smart Vest</string>
    <string name="smart_vest_icon_stroke">smart vest icon</string>
    <string name="login_worker">작업자 로그인</string>
    <string name="login_manager">관리자 로그인</string>
    <string name="text_login">로그인</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_manager">관리자</string>
    <string name="text_id_hint">아이디를 입력하세요.</string>
    <string name="text_pw_hint">비밀번호를 입력하세요.</string>
    <string name="text_id">ID</string>
    <string name="text_pw">PASSWORD</string>
    <string name="text_login_worker">작업자 로그인</string>
    <string name="text_port_select">항만 선택</string>
    <string name="text_port_hint">항만을 선택하세요.</string>
    <string name="text_wharf_select">부두 선택</string>
    <string name="text_wharf_hint">부두를 선택하세요.</string>
    <string name="text_company_select">소속 회사 선택</string>
    <string name="text_company_hint">소속 회사를 선택하세요.</string>
    <string name="text_location_manager">작업자 위치 확인하기</string>
    <string name="text_safety_manager">작업자 위험도 확인하기</string>
    <string name="text_number">번호</string>
    <string name="text_danger">위험요인</string>
    <string name="text_safety">안전도</string>
    <string name="text_location_worker">내 위치 확인하기</string>
    <string name="text_safety_worker">안전도 상세보기</string>
    <string name="text_manual_worker">매뉴얼</string>
    <string name="text_report_worker">신고 접수</string>
    <string name="text_my_vest_number">"내 조끼 번호  |  "</string>
    <string name="text_vest_connection">"조끼 연결 상태  |  "</string>
    <string name="text_worker_count">"현재 작업자 수  |  "</string>
    <string name="text_manual_smartvest">스마트 조끼 매뉴얼</string>
    <string name="text_manual_general">해상작업 일반\n안전 매뉴얼</string>
    <string name="text_manual_general2">해상작업 일반 안전 매뉴얼</string>
    <string name="text_manual_construct">항만 건설 작업자\n안전 매뉴얼</string>
    <string name="text_manual_construct2">항만 건설 작업자 안전 매뉴얼</string>
    <string name="text_manual_load">항만 하역 작업자\n안전 매뉴얼</string>
    <string name="text_manual_test">항만내 검수 작업자\n안전 매뉴얼</string>
    <string name="text_manual_transport">항만 운송 작업자\n안전 매뉴얼</string>
    <string name="text_manual_vest_connect">스마트조끼와\n블루투스 연결하기</string>
    <string name="text_manual_vest_connect2">스마트조끼와 블루투스 연결하기</string>
    <string name="text_manual_vest_func">스마트조끼 기능</string>
    <string name="text_safety_mq5">LPG, 천연, 석탄 등\n가연성 가스</string>
    <string name="text_safety_mq5_info">가연성 가스의 위험수치 값 500ppm 기준</string>
    <string name="text_safety_mq2">프로판, 부탄, 일산화탄소\n질식성 가스</string>
    <string name="text_safety_mq2_info">가연성 가스의 위험수치 값 500ppm 기준</string>
    <string name="text_safety_temp">온도 / 습도</string>
    <string name="text_safety_temp_info">온도 20도 / 습도 30% 기준</string>
    <string name="degree">℃</string>
    <string name="text_input_name">이름</string>
    <string name="text_name_hint">이름을 입력하세요.</string>
    <string name="text_bluetooth_connect">블루투스 연결하기</string>
</resources>
