<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/titlebar_underline"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/text_login_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/text_login_worker"
            android:textColor="@color/app_name_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="40dp"
        android:paddingRight="50dp"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/text_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/text_port_select"
            android:textColor="@color/app_name_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/select_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:completionThreshold="0"
            android:hint="@string/text_port_hint"
            android:padding="10dp"
            android:textColorHint="@color/hint_color" />

        <TextView
            android:id="@+id/text_wharf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_wharf_select"
            android:textColor="@color/app_name_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/select_wharf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:completionThreshold="0"
            android:hint="@string/text_wharf_hint"
            android:padding="10dp"
            android:textColorHint="@color/hint_color" />

        <TextView
            android:id="@+id/text_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_company_select"
            android:textColor="@color/app_name_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/select_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:completionThreshold="0"
            android:hint="@string/text_company_hint"
            android:padding="10dp"

            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/button_login_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonshape"
            android:text="@string/text_login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>